# 30_OmniVibePor

./: .deploy_credentials  .gitignore  .pdca.json  CLAUDE.md  DOCKER_SETUP.md  INSTALL_DOCKER_COMPOSE.sh  PHASE1_POC_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  RALPLAN.md  README.md  REALPLAN.md  RUN_TESTS.md  SECURITY_CREDENTIALS.md  TEMPLATE_BASED_CONTENT_FACTORY.md  ULTRAPILOT_COMPLETE.md  UX_IMPROVEMENT_PROPOSAL.md  VIBE_CODING_LV4_ROADMAP.md  VIBE_CODING_LV5_MASTER.md  VOICE_CLONING_GUIDE.md  VULTR_QUICK_START.md  deploy-omnivibe.sh  deploy-vultr.sh  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.vultr.yml  docker-compose.yml  prd.md
backend/: .dockerignore  .env.example  .gitignore  CLOUDINARY_IMPLEMENTATION_REPORT.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.production  Dockerfile.simple  LIPSYNC_IMPLEMENTATION_REPORT.md  Makefile  PHASE_0.2_TEST_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PRESENTATION_API_GUIDE.md  README.md  VIDEO_METADATA_IMPLEMENTATION.md  add_logging_imports.py  alembic.ini  check_services.sh  create_test_user.py  docker-compose.yml  example_slide_timing_usage.py  fix_all_logging.sh  fix_logging.py  flower_config.py  migrate_add_indexes.sql  omni_db.sqlite  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup_env.sh  simple_db_test.py  start_celery.sh  stop_celery.sh  test_api.sh  test_audio.sh  test_audio_e2e.py  test_bgm_api.py  test_character_service.py  (+16 more)
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/agents/: director_agent.py  (+1 more)
backend/config/: deploy.yml
backend/docs/: API_CAMPAIGNS_SUMMARY.md  API_DOCUMENTATION.md  CHARACTER_SERVICE_README.md  CLIP_EDITOR_IMPLEMENTATION.md  CLOUDINARY_SERVICE_GUIDE.md  COSTS_API.md  E2E_TESTING_GUIDE.md  LIPSYNC_QUICKSTART.md  LIPSYNC_SERVICE.md  LOGFIRE_SETUP.md  NEO4J_SCHEMA.md  NEO4J_USAGE.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_TEST_REPORT.md  PHASE_7_INTEGRATION_TEST.md  PHASE_8_SECURITY_REPORT.md  PHASE_9_AI_RESTORATION.md  PRE_DEPLOYMENT_CHECKLIST.md  PROGRESS_TRACKER_INTEGRATION.md  REMOTION_INTEGRATION.md  SECURITY_AUDIT.md  SECURITY_GUIDE.md  SECURITY_HARDENING.md  SLIDE_TIMING_ANALYZER_USAGE.md  SLIDE_TO_SCRIPT_EXAMPLE.md  SQLITE3_OPTIMIZATION_GUIDE.md  STORYBOARD_IMPLEMENTATION_REPORT.md  SUBTITLE_API.md  SUBTITLE_SERVICE_USAGE.md  SWAGGER_CONFIGURATION.md  TESTING_GUIDE.md  VIDEO_METADATA_API.md  VIDEO_RENDERER_GUIDE.md  VIDEO_RENDERER_README.md  VOICE_CLONING_ADVANCED.md  VREW_API_TEST.md  WEBSOCKET_INTEGRATION_EXAMPLE.md  WEBSOCKET_USAGE.md  WEEK3_COMPLETION_REPORT.md  WEEK4_COMPLETION_REPORT.md  (+2 more)
backend/scripts/: backup_db.sh  generate_bobot_narration.py  generate_chopd_narration.py  generate_insuregraph_narration.py  init_neo4j.py  init_neo4j_schema.cypher  lint_ffmpeg_profile_usage.py  load_test.py  migrate_sqlite_to_pg.py  verify_overlay_parity.py
backend/test_marp_spike/: test-marp.md
backend/tests/: conftest.py  test_audio_generation.py  test_audio_loop.py  test_backgrounds.py  test_clip_editor_api.py  test_cloudinary_service.py  test_config.py  test_costs_api.py  test_final_e2e.py  test_ios_mp4_real_output.py  test_lipsync.py  test_overlay_generator_service.py  test_phase4_e2e.py  test_phase_a_integration.py  test_presentation_e2e.py  test_presets_import.py  test_progress_tracker.py  test_prompt_variations_simple.py  test_security.py  test_slide_timing_analyzer.py  test_stt_router.py  test_subtitle_service.py  test_video_renderer.py  test_websocket.py
(+770 files in other folders)
