[tool.poetry]
name = "omnivibe-pro"
version = "0.1.0"
description = "AI 옴니채널 영상 자동화 SaaS - Vibe Coding 방법론 기반"
authors = ["OmniVibe Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
langgraph = "^0.0.26"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"
logfire = "^0.25.0"
openai = "^1.12.0"
elevenlabs = "^1.0.0"
pinecone-client = "^3.0.0"
neo4j = "^5.16.0"
google-api-python-client = "^2.115.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
cloudinary = "^1.38.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
httpx = "^0.26.0"
pillow = "^10.2.0"
transformers = "^4.37.0"
torch = "^2.2.0"
opencv-python = "^4.9.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
httpx = "^0.26.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
